system/keycloak/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keycloak
    sectionName: keycloak
  hostnames:
  - auth.seigra.net
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: keycloak-service
      namespace: keycloak
      port: 80
      weight: 1
